--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   align-content: center;
   row-gap: 2rem;
   box-sizing: border-box;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 h1, h2, h3, h4, h5, h6, strong, b {
@@ -55,6 +57,6 @@ a {
   h1 {
     margin: 0;
     font-size: 3rem;
-    letter-spacing: -0.01em;
+    letter-spacing: -0.015em;
   }
 }
