--- a/style.css
+++ b/style.css
@@ -1,71 +1,3 @@
-@font-face {
-  font-family: Octavia;
-  src: url("/assets/Octavia-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-:root {
-  --color-white: #fff;
-  --color-black: #000;
-  --color-gray: #eee;
-  --color-blue: #2566ff;
-}
-
-body {
-  font-family: Octavia, system-ui, sans-serif;
-  margin: 0;
-  min-height: 100vh;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  row-gap: 1rem;
-  box-sizing: border-box;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-}
-
-h1, h2, h3, h4, h5, h6, strong, b {
-  font-weight: 400;
-}
-
-a {
-  color: inherit;
-}
-
-::selection {
-  color: var(--color-black);
-  background-color: var(--color-gray);
-}
-
-.coming-soon {
-  color: var(--color-blue);
-  font-size: 1.25rem;
-  text-align: center;
-  padding: 2rem;
-
-  img {
-    display: block;
-    width: 150px;
-    margin: auto;
-  }
-
-  a {
-    text-underline-offset: 0.25em;
-    text-decoration-thickness: 1px;
-    text-decoration-skip-ink: none;
-    transition: text-underline-offset 200ms;
-
-    &:hover {
-      text-underline-offset: -0.25em;
-    }
-  }
-  h1 {
-    margin: 0;
-    font-size: 3rem;
-    letter-spacing: -0.015em;
-  }
-  p {
-    margin: 0;
-  }
-}
+@import "styles/variables.css";
+@import "styles/base.css";
+@import "styles/layouts.css";
