--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+  outline: 1px solid var(--color-background-dark);
+}
 body {
   font-family: Octavia, system-ui, sans-serif;
   margin: 0;
