--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 @import "styles/variables.css";
 @import "styles/base.css";
 @import "styles/layouts.css";
+@import "styles/typography.css";
+
+@import "styles/components/logo.css";
