--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  outline: 1px solid var(--color-background-dark);
+  /* outline: 1px solid var(--color-background-dark); */
 }
 body {
   font-family: Octavia, system-ui, sans-serif;
@@ -9,9 +9,8 @@ body {
   box-sizing: border-box;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  color: var(--color-foreground);
-  background-color: var(--color-background);
   font-size: var(--font-size-small);
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, strong, b {
