--- a/_includes/styles/variables.css
+++ b/_includes/styles/variables.css
@@ -9,6 +9,15 @@
 :root {
   --color-white: #fff;
   --color-blue: #2566ff;
+
+  --font-size-small: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
+  --font-size-text: clamp(1.2rem, 1.0958rem + 0.5211vw, 1.4996rem);
+  --font-size-title: clamp(1.44rem, 1.2456rem + 0.9722vw, 1.999rem);
+  /* --font-size-display: clamp(2.4883rem, 1.7069rem + 3.907vw, 4.7348rem); */
+  --font-size-display: clamp(2.986rem, 1.8293rem + 5.7835vw, 6.3115rem);
+}
+
+.theme-light {
   --color-background: var(--color-white);
   --color-background-dark: color-mix(
     in hsl,
@@ -21,12 +30,6 @@
     var(--color-foreground),
     black 10%
   );
-
-  --font-size-small: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
-  --font-size-text: clamp(1.2rem, 1.0958rem + 0.5211vw, 1.4996rem);
-  --font-size-title: clamp(1.44rem, 1.2456rem + 0.9722vw, 1.999rem);
-  /* --font-size-display: clamp(2.4883rem, 1.7069rem + 3.907vw, 4.7348rem); */
-  --font-size-display: clamp(2.986rem, 1.8293rem + 5.7835vw, 6.3115rem);
 }
 
 .theme-dark {
@@ -42,4 +45,9 @@
     var(--color-foreground),
     black 10%
   );
+}
+
+.theme-dark, .theme-light {
+  background-color: var(--color-background);
+  color: var(--color-foreground);
 }
