--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   /* outline: 1px solid var(--color-background-dark); */
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: Octavia, system-ui, sans-serif;
   margin: 0;
