--- a/_includes/styles/components/navigation.css
+++ b/_includes/styles/components/navigation.css
@@ -1,37 +1,65 @@
 .navigation {
   display: flex;
-  padding: 40px 0;
+  padding-top: 40px;
+}
+
+.navigation-item {
+  position: relative;
+
+  &.is-next {
+    margin-left: auto;
+    margin-right: -50px;
+  }
+  &.is-prev {
+    margin-left: -50px;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: -3px;
+    left: -3px;
+    width: 306px;
+    height: 306px;
+    transition: clip-path 200ms;
+    background-color: var(--color-foreground);
+    clip-path: circle(53px at 50% 50%);
+  }
+  &:has(a:hover)::after {
+    clip-path: circle(153px at 50% 50%);
+  }
 
   > a {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
     display: flex;
     align-items: center;
-    border-radius: 100%;
     text-decoration: none;
     white-space: nowrap;
     font-size: var(--font-size-title);
-    box-shadow: 0 0 0 3px var(--color-foreground);
-    transition: box-shadow 200ms;
+    letter-spacing: var(--tracking-title);
+    line-height: var(--line-height-short);
+    transition: clip-path 200ms;
     outline: none;
-
-    &[rel="next"] {
-      margin-left: auto;
-    }
+    clip-path: circle(50px at 50% 50%);
+    margin-bottom: -50px;
+    position: relative;
+    z-index: 1;
 
     > span {
       display: block;
+      transform: translateX(100px);
       transition: transform 200ms;
     }
 
     &:hover {
-      box-shadow: 0 0 0 100px var(--color-background);
+      clip-path: circle(150px at 50% 50%);
 
-      &[rel="prev"] > span {
-        transform: translateX(-20px);
-      }
       &[rel="next"] > span {
-        transform: translateX(-50px);
+        transform: translateX(25px);
+      }
+      &[rel="prev"] > span {
+        transform: translateX(75px);
       }
     }
   }
