--- a/style.css
+++ b/style.css
@@ -7,3 +7,5 @@
 @import "styles/components/navigation.css";
 @import "styles/components/menu.css";
 @import "styles/components/chart.css";
+@import "styles/components/more.css";
+@import "styles/components/resource.css";
