--- a/_includes/styles/components/chart.css
+++ b/_includes/styles/components/chart.css
@@ -27,6 +27,9 @@
   dd {
     margin: 0;
     grid-column: 2 / -1;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3px;
   }
 }
 .chart-dot {
@@ -53,4 +56,13 @@
   + .chart-legend {
     margin-top: 24px;
   }
+}
+.chart-value {
+  display: inline-flex;
+  font-size: var(--font-size-small);
+  line-height: var(--line-height-short);
+  padding: 0 4px;
+  height: 20px;
+  align-items: center;
+  display: none;
 }
