--- a/_includes/styles/layouts.css
+++ b/_includes/styles/layouts.css
@@ -1,5 +1,6 @@
 .ly-page {
   display: grid;
+  align-items: start;
   grid-template-columns:
     40px [menu-start] minmax(0, 1fr) [menu-end details-start] minmax(
     0,
@@ -11,6 +12,8 @@
 
 .ly-page-menu {
   grid-column: menu-start / content-start;
+  display: grid;
+  row-gap: 48px;
   padding-top: 40px;
   grid-row: 1;
   z-index: 1;
@@ -34,7 +37,7 @@
   display: grid;
   grid-template-columns: subgrid;
   align-content: start;
-  min-height: calc(100vh - 300px);
+  min-height: 100vh;
   row-gap: 40px;
   padding: 40px 0;
 
@@ -46,6 +49,9 @@
     }
   }
 }
+.ly-page:has(.ly-page-more) .ly-page-hero {
+  min-height: calc(100vh - 190px);
+}
 
 .ly-page-more {
   grid-column: 1 / -1;
@@ -56,7 +62,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 100px 0;
+  margin: 50px 0;
 }
 
 .ly-page-details {
@@ -67,12 +73,10 @@
 }
 
 .ly-page-nav {
-  height: 300px;
-  overflow-y: clip;
-  position: sticky;
+  overflow-x: clip;
   align-items: center;
   z-index: 2;
-  bottom: 0;
+  bottom: 100px;
   grid-column: 1 / -1;
 }
 
