--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -5,6 +5,9 @@
 html {
   scroll-behavior: smooth;
 }
+@view-transition {
+  navigation: auto;
+}
 body {
   font-family: Octavia, system-ui, sans-serif;
   margin: 0;
