--- a/_includes/styles/components/navigation.css
+++ b/_includes/styles/components/navigation.css
@@ -5,12 +5,24 @@
 .navigation-item {
   position: fixed;
   bottom: -10px;
+  pointer-events: none;
 
   &.is-next {
     right: -60px;
   }
   &.is-prev {
     left: -60px;
+  }
+
+  @media (width < 600px) {
+    bottom: -40px;
+
+    &.is-next {
+      right: -90px;
+    }
+    &.is-prev {
+      left: -90px;
+    }
   }
 
   &::after {
@@ -32,6 +44,7 @@
   }
 
   > a {
+    pointer-events: initial;
     width: 300px;
     height: 300px;
     display: flex;
