--- a/style.css
+++ b/style.css
@@ -9,3 +9,4 @@
 @import "styles/components/chart.css";
 @import "styles/components/more.css";
 @import "styles/components/resource.css";
+@import "styles/components/list.css";
