--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -5,9 +5,6 @@
 html {
   scroll-behavior: smooth;
 }
-@view-transition {
-  navigation: auto;
-}
 body {
   font-family: Octavia, system-ui, sans-serif;
   margin: 0;
@@ -18,6 +15,7 @@ body {
   text-rendering: optimizeLegibility;
   font-size: var(--font-size-small);
   overflow-x: hidden;
+  scrollbar-gutter: stable both-edges;
 }
 
 h1, h2, h3, h4, h5, h6, strong, b {
