--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import "styles/variables.css";
 @import "styles/base.css";
 @import "styles/layouts.css";
+@import "styles/transitions.css";
 @import "styles/typography.css";
 
 @import "styles/components/logo.css";
