--- a/_includes/styles/components/resource.css
+++ b/_includes/styles/components/resource.css
@@ -19,6 +19,10 @@
   display: flex;
   column-gap: 20px;
 
+  &[hidden] {
+    display: none;
+  }
+
   > a {
     text-decoration: none;
   }
@@ -34,11 +38,8 @@
   row-gap: 8px;
   padding-right: 48px;
   padding-left: 42px;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 1080 1080" xml:space="preserve"><path d="M90,937.2l598.3-596.6c-46-81.8-109.1-136.4-172.2-136.4c-66.5,0-110.8,49.4-110.8,105.7c0,46,35.8,95.4,90.3,129.5l-51.1,51.1C379.8,448,332,386.6,332,313.3c0-93.7,69.9-177.3,182.4-177.3c95.4,0,179,63.1,226.7,153.4L938.9,91.7l51.1,51.1L396.8,734.3c29,78.4,97.2,141.5,168.8,141.5c76.7,0,141.5-57.9,141.5-131.2c0-56.3-37.5-107.4-90.3-138.1l49.4-49.4c63.1,39.2,114.2,105.7,114.2,184.1c0,117.6-93.7,202.8-214.8,202.8c-98.9,0-187.5-71.6-223.3-156.8L141.1,988.3L90,937.2z"/></svg>');
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: 24px 24px;
   flex-grow: 1;
+  position: relative;
 
   &:hover {
     .resource-title {
@@ -46,6 +47,18 @@
       text-decoration-thickness: 3px;
       text-underline-offset: -0.3em;
     }
+  }
+}
+.resource-icon {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  &.feather {
+    fill: none;
   }
 }
 .resource-new-window {
