--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@
 @import "styles/components/more.css";
 @import "styles/components/resource.css";
 @import "styles/components/list.css";
+@import "styles/components/filters.css";
