--- a/_includes/styles/layouts.css
+++ b/_includes/styles/layouts.css
@@ -29,7 +29,7 @@
   grid-column: menu-start / content-start;
   display: grid;
   row-gap: 48px;
-  padding-top: 40px;
+  padding: 40px 0;
   grid-row: 1;
   z-index: 1;
 }
@@ -82,6 +82,14 @@ header.ly-page-content {
   align-items: center;
   justify-content: center;
   margin: 50px 0;
+}
+
+.ly-page-map {
+  grid-column: menu-start / extra-end;
+  width: 100%;
+  height: min(800px, 100vh);
+  border: none;
+  border-radius: 4px;
 }
 
 .ly-page-details {
