--- a/style.css
+++ b/style.css
@@ -12,3 +12,4 @@
 @import "styles/components/resource.css";
 @import "styles/components/list.css";
 @import "styles/components/filters.css";
+@import "styles/components/person.css";
