--- a/style.css
+++ b/style.css
@@ -13,3 +13,6 @@
 @import "styles/components/list.css";
 @import "styles/components/filters.css";
 @import "styles/components/person.css";
+@import "styles/components/form.css";
+@import "styles/components/links.css";
+@import "styles/components/home.css";
