--- a/style.css
+++ b/style.css
@@ -16,3 +16,4 @@
 @import "styles/components/form.css";
 @import "styles/components/links.css";
 @import "styles/components/home.css";
+@import "styles/components/text.css";
