--- a/_includes/styles/components/chart.css
+++ b/_includes/styles/components/chart.css
@@ -131,6 +131,13 @@
   background-color: var(--color-background);
   padding: 0 1rem;
   min-height: 20px;
+
+  &:empty {
+    background-image: linear-gradient(to bottom, var(--color-foreground), var(--color-foreground) 5px, var(--color-background) 5px);
+    background-repeat: repeat-y;
+    background-size: 1px 10px;
+    background-position: center;
+  }
 }
 .chart-pricing-details {
   font-size: var(--font-size-small);
