--- a/_includes/styles/components/home.css
+++ b/_includes/styles/components/home.css
@@ -23,6 +23,24 @@
     color: var(--color-background);
   }
 }
+.home-intro {
+  grid-column: menu-start / extra-end;
+  max-width: 8em;
+
+  &[lang="en"] {
+    grid-row: 1;
+    justify-self: start;
+  }
+  &[lang="es"] {
+    grid-row: 2;
+    justify-self: end;
+    text-align: right;
+  }
+
+  @media (width < 700px) {
+    display: none;
+  }
+}
 .home-nav {
   grid-row: 1 / -1;
   grid-column: content-start / extra-end;
