--- a/_includes/styles/components/chart.css
+++ b/_includes/styles/components/chart.css
@@ -34,7 +34,8 @@
     margin: 0;
     grid-column: 2 / -1;
     display: flex;
-    column-gap: 8px;
+    flex-wrap: wrap;
+    gap: 4px;
   }
 }
 .chart-dots {
