--- a/_includes/styles/components/form.css
+++ b/_includes/styles/components/form.css
@@ -26,6 +26,10 @@
       color: var(--color-background);
       background: var(--color-foreground);
     }
+    &:autofill {
+      color: var(--color-foreground);
+      background: var(--color-background);
+    }
   }
 }
 .form-footer {
